# JaxABM

./: .bandit  .gitignore  .readthedocs.yaml  CALIBRATION_GUIDE.md  CITATION.cff  COVERAGE_IMPROVEMENT_SUMMARY.md  MANIFEST.in  README.md  __init__.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_calibration.py
.github/workflows/: ci.yml  coverage.yml  publish.yml  tests.yml
docs/: PYPI_SETUP.md  advanced_agent_features.md  agentpy_interface.md  agentpy_interface_guide.md  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/api/: index.rst
docs/calibration/: index.rst  reinforcement_learning.rst
docs/examples/: index.rst
docs/tutorials/: index.rst
examples/: README.md  advanced_economic_model.py  agentpy_interface_example.py  basic_agent_example.py  basic_example.py  custom_agent_configuration.py  custom_agent_methods.py  economy_model_configuration.py  jax_abm_example.py  jax_abm_professional.py  jax_abm_simple.py  minimal_example.py  minimal_example_agentpy.py  random_walk.py  schelling_model.py  sensitivity_calibration_example.py  simple_economy_model.py  simple_model.py  simple_sensitivity_example.py
examples/calibration/: advanced_calibration_example.py  final_working_calibration_demo.py
examples/models/: ECONOMY_MODEL_README.md  schelling_model.py
examples/sensitivity/: sensitivity_calibration_example.py  simple_sensitivity_example.py
jaxabm/: __init__.py  agent.py  agentpy.py  analysis.py  model.py  utils.py
tests/: README.md
tests/integration/: test_integration.py
tests/unit/: test_agent.py  test_analysis.py  test_api.py  test_core.py  test_imports.py  test_model.py  (+2 more)
