[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxabm"
version = "0.1.0"
description = "A JAX-accelerated agent-based modeling framework"
readme = "README.md"
authors = [
    {name = "Anh-Duy Pham", email = "duypham@stanford.edu"},
    {name = "Paola D'Orazio"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.8"
dependencies = [
    "polars>=0.19.3",
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "networkx>=2.6.0",
    "tqdm>=4.62.0",
    "pyDOE2>=1.3.0",
    "SALib>=1.4.5",
    "jax>=0.4.1",
    "jaxlib>=0.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "flake8>=3.8.0",
    "black>=21.0.0",
    "mypy>=0.800",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "nbsphinx>=0.8.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/a11to1n3/JaxABM"
Repository = "https://github.com/a11to1n3/JaxABM"
Documentation = "https://jaxabm.readthedocs.io"
"Bug Tracker" = "https://github.com/a11to1n3/JaxABM/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["jaxabm*"]
exclude = ["tests*"] 